# behavioral_calibration

./: .gitignore  .pre-commit-config.yaml  README.md  agent.py  benchmarks.py  config.py  data_loader.py  evaluation.py  main.py  models.py  pyproject.toml  schema.py  test_logger.py  utils.py  visualization.py
evaluations/: __init__.py  base_evaluator.py  evaluator_factory.py  gpqa_evaluator.py  gsm8k_evaluator.py  mc_evaluator.py  proxy_evaluator.py  svamp_evaluator.py  swe_evaluator.py
prompts/: behavioral_calibration_prompt.py  gpqa_prompt.py  mc_prompt.py  prompt_factory.py  proxy_prompt.py  svamp_prompt.py  swe_prompt.py
src/cli/: analyze_calibration.py  assess_calibration.py  measure_calibration.py  simulate_calibration.py
src/core/: agent.py  benchmarks.py  config.py  data_loader.py  evaluation.py  models.py  schema.py
src/evaluations/: base_evaluator.py  evaluator_factory.py  gsm8k_evaluator.py  mc_evaluator.py  proxy_evaluator.py  svamp_evaluator.py  swe_evaluator.py
src/prompts/: behavioral_calibration_prompt.py  gsm8k_prompt.py  prompt_factory.py  proxy_prompt.py
src/reporting/: behavioral_threshold_plots.py  simulation_analysis_plots.py  visualization.py
src/tests/: test_answer_to_patch.py
src/utils/: calibration_utils.py  core_utils.py  evaluation_utils.py  instance_processor.py
src/utils/benchmarks/: __init__.py  swe_utils.py
tests/: test_answer_to_patch.py
utils/: core_utils.py  evaluation_utils.py  instance_processor.py
utils/benchmarks/: proxy_utils.py  swe_utils.py
