[project]
name = "behavioral-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.2",
    "black>=25.1.0",
    "pydantic>=2.11.7",
    "openai>=1.107.0",
    "tenacity>=9.1.2",
]
