[project]
name = "behavioral-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.2",
    "black>=25.1.0",
    "pydantic>=2.11.7",
    "openai>=1.107.0",
    "tenacity>=9.1.2",
    "swebench>=4.0.5",
    "tiktoken>=0.11.0",
    "transformers[sentencepiece]>=4.56.1",
    "huggingface-hub>=0.34.4",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.uv.sources]
swebench = { git = "https://github.com/SWE-bench/SWE-bench.git" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
